<?xml version="1.0"?>
<package format="2">
  <name>talker_sensor</name>
  <version>0.0.1</version>
  <description>The talker package from ROS tutorials</description>

  <maintainer email="yuokamoto1988@gmail.com">Yu Okamoto</maintainer>

  <license>Commercial</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
